Refactored summary panes to own partials.

--- a/templates/tsl-vehicle-sheet.hbs
+++ b/templates/tsl-vehicle-sheet.hbs
@@ -51,185 +51,9 @@
     <div class="tab" data-group="primary" data-tab="summary">
       {{> "modules/tsl-module/templates/partials/tsl-core-stats.hbs"}}
       <div class="tsl-picture-row">
-        {{!-- Three columns - data table, pic, data table. --}}
-        <div>
-          <table>
-            <thead>
-              <tr>
-                <th>{{localize "tsl.summaryPage.currentSpeed"}}</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>
-                  <div class="tsl-gauge">
-                    <div class="tsl-current-value">
-                      <a><i class="fas fa-minus"></i></a>
-                      <input style="width:75px" name="" type="number" data-dtype="Number" value="" onfocus="this.select()"/>
-                      <a><i class="fas fa-plus"></i></a>
-                    </div>
-                    <div class="gauge" style="width:140px">
-                      <span class="dial band"></span>
-                      {{#times 24}}
-                        <span class="tick tick-speedo"></span>
-                      {{/times}}
-                      <span class="needle pushed"></span>
-                      {{!-- Fuel ticks; Big every 25%, one between each. --}}
-                      {{!-- Fuel gauge w/ red fuel.svg inside when <25% fuel. --}}
-                    </div>
-                  </div>
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  <div class="tsl-speed-conversion">
-                    <span>MPH</span>
-                    <span>25</span>
-                    <span>/</span>
-                    <span>52</span>
-                  </div>
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  <div class="tsl-speed-conversion">
-                    <span>KPH</span>
-                    <span>25</span>
-                    <span>/</span>
-                    <span>15,500</span>
-                  </div>
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  <div class="tsl-speed-conversion">
-                    <span>SPR</span>
-                    <span>15,500</span>
-                    <span>/</span>
-                    <span>15,500</span>
-                  </div>
-                </td>
-              </tr>
-            </tbody>
-          </table>
-          <table class="tsl-defenses">
-            <thead>
-              <tr>
-                <th colspan="2">{{localize "tsl.summaryPage.hitPoints"}}</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>
-                  <div class="tsl-hp">
-                    <input name="" type="number" data-dtype="Number" value="" onfocus="this.select()"/>
-                    <span>/</span>
-                    <span>15,500</span>
-                  </div>
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  <div class="tsl-ac-armor">
-                    <span><b>AC</b></span>
-                    <span>50</span>
-                    <span><b>HD</b></span>
-                    <span>50</span>
-                  </div>
-                </td>
-              </tr>
-            </tbody>
-          </table>
-          <table>
-            <thead>
-              <tr>
-                <th>{{localize "tsl.summaryPage.curbWeight"}}</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td style="font-size:1.25em">31,000,000</td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
+        {{> "modules/tsl-module/templates/partials/tsl-summary-leftpane.hbs"}}
         <div style="background:blue"></div>
-        <div>
-          <table>
-            <thead>
-              <tr>
-                <th colspan="3">{{localize "tsl.summaryPage.hoursOfOperation"}}</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td colspan="3">
-                  <div class="tsl-gauge">
-                    <div class="tsl-current-value">
-                      <a><i class="fas fa-minus"></i></a>
-                      <input style="width:75px" name="" type="number" data-dtype="Number" value="" onfocus="this.select()"/>
-                      <a><i class="fas fa-plus"></i></a>
-                    </div>
-                    <div class="gauge" style="width:140px">
-                      <span class="dial"></span>
-                      {{#times 10}}
-                        <span class="tick tick-fuel"></span>
-                      {{/times}}
-                      <img style="{{! if someval < 25% display:none}}" class="glow-red fuel-light" src="modules/tsl-module/img/fuel.svg"/>
-                      <span class="needle"></span>
-                    </div>
-                  </div>
-                </td>
-              </tr>
-            </tbody>
-            <thead>
-              <tr>
-                <th>{{localize "tsl.summaryPage.base"}}</th>
-                <th>{{localize "tsl.summaryPage.ld"}}</th>
-                <th>{{localize "tsl.summaryPage.mods"}}</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>8000</td>
-                <td>-8000</td>
-                <td><input style="width:40px" name="" type="number" data-dtype="Number" value=""/></td>
-              </tr>
-              <tr>
-                <td colspan="3"><b>{{localize "tsl.summaryPage.fuelCap"}}:&nbsp;</b>1,200</td>
-              </tr>
-            </tbody>
-          </table>
-          <table>
-            <thead>
-              <tr>
-                <th colspan="2">{{localize "tsl.summaryPage.rammingDamage"}}</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td colspan="2">
-                  <div class="tsl-ramming-damage">
-                    <span>15,500</span>
-                    <a><i class="fas fa-car-crash"></i></a>
-                  </div>
-                </td>
-              </tr>
-            </tbody>
-            <thead>
-              <tr>
-                <th>{{localize "tsl.summaryPage.base"}}</th>
-                <th>{{localize "tsl.summaryPage.mods"}}</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>15,500</td>
-                <td><input style="width:40px" name="" type="number" data-dtype="Number" value=""/></td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
+        {{> "modules/tsl-module/templates/partials/tsl-summary-rightpane.hbs"}}
       </div>
       <div class="tsl-final-row">
         <table>
