Wireframed component table base.

--- a/less/tsl.less
+++ b/less/tsl.less
@@ -210,6 +210,12 @@
 
     }
 
+    .tsl-components-row {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      column-gap: 16px;
+    }
+
     .tab.active {
       height: 100%;
 
