--- a/templates/tsl-vehicle-sheet.hbs
+++ b/templates/tsl-vehicle-sheet.hbs
@@ -85,50 +85,64 @@
         <table>
           <thead>
             <tr>
-              <th colspan="4">ENGINE</th>
+              <th colspan="4"># COMPONENT LABEL #</th>
             </tr>
+          </thead>
+          <thead>
             <tr>
-              <th colspan="2">TOTAL</th>
-              <th>BASE</th>
-              <th>MODS</th>
+              <th colspan="2">{{localize "tsl.componentsPage.total"}}</th>
+              <th>{{localize "tsl.componentsPage.base"}}</th>
+              <th>{{localize "tsl.componentsPage.mods"}}</th>
             </tr>
           </thead>
           <tbody>
             <tr>
-              <th>Ho</th>
-              <td>1555</td>
-              <td>1555</td>
-              <td>0</td>
+              <th style="width:85px"># STAT #</th>
+              <td style="font-size:1.25em"><b>31,000,000</b></td>
+              <td><input style="width:50px" type="number" data-dtype="Number"/></td>
+              <td><input style="width:50px" type="number" data-dtype="Number"/></td>
             </tr>
           </tbody>
           <thead>
             <tr>
-              <th colspan="2">TOTAL</th>
-              <th>BASE</th>
-              <th>RESIST</th>
+              <th></th>
+              <th>{{localize "tsl.componentsPage.total"}}</th>
+              <th>{{localize "tsl.componentsPage.base"}}</th>
+              <th>{{localize "tsl.componentsPage.resist"}}</th>
             </tr>
           </thead>
           <tbody>
             <tr>
-              <th>INTEGRITY</th>
-              <td>10</td>
-              <td>10</td>
-              <td>0</td>
+              <th>{{localize "tsl.componentsPage.integrity"}}</th>
+              <td style="font-size:1.25em"><b>10</b></td>
+              <td><input style="width:50px" type="number" data-dtype="Number"/></td>
+              <td><input style="width:50px" type="number" data-dtype="Number"/></td>
             </tr>
           </tbody>
           <thead>
             <tr>
-              <th colspan="4">&nbsp;</th>
+              <th colspan="2"># PRIMARY #</th>
+              <th colspan="2"># SECONDARY #</th>
             </tr>
           </thead>
           <tbody>
             <tr>
-              <th>TYPE</th>
-              <td colspan="3">Crystal Engine</td>
+              <td colspan="2"><input style="width:50px" type="number" data-dtype="Number"/></td>
+              <td colspan="2"><input style="width:50px" type="number" data-dtype="Number"/></td>
             </tr>
+          </tbody>
+        </table>
+        <table>
+          <thead>
             <tr>
-              <th>FUEL</th>
-              <td colspan="3">GUZZOLENE</td>
+              <th>{{localize "tsl.componentsPage.notesLabel"}}</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td style="height:171px">
+                <textarea style="height:100%" name="" placeholder="{{localize "tsl.componentsPage.notesPlaceholder"}}"></textarea>
+              </td>
             </tr>
           </tbody>
         </table>
