Added Modifications tab for component mods.

--- a/templates/tsl-vehicle-sheet.hbs
+++ b/templates/tsl-vehicle-sheet.hbs
@@ -41,6 +41,7 @@
   <nav class="tslv-tabs tabs" data-group="primary">
     <a class="item" data-tab="summary">{{localize "tsl.nav.summary"}}</a>
     <a class="item" data-tab="components">{{localize "tsl.nav.components"}}</a>
+    <a class="item" data-tab="modifications">{{localize "tsl.nav.modifications"}}</a>
     <a class="item" data-tab="cargo">{{localize "tsl.nav.cargo"}}</a>
     <a class="item" data-tab="notes">{{localize "tsl.nav.notes"}}</a>
   </nav>
@@ -147,6 +148,11 @@
           </tbody>
         </table>
       </div>
+    </div>
+
+    {{!-- Modifications --}}
+    <div class="tab" data-group="primary" data-tab="modifications">
+      <p>Modifications</p>
     </div>
 
     {{!-- Cargo --}}
