--- a/templates/tsl-vehicle-sheet.hbs
+++ b/templates/tsl-vehicle-sheet.hbs
@@ -157,7 +157,55 @@
 
     {{!-- Cargo --}}
     <div class="tab" data-group="primary" data-tab="cargo">
-      <p>Cargo</p>
+      <div class="tsl-cargo-totals">
+        <div class="crew-weight">
+          <h3><b>{{localize "tsl.cargoPage.crewWeight"}}:</b></h3>
+          <input style="width:100px" name="" type="number" data-dtype="Number" value=""/>
+          <h3>lbs</h3>
+        </div>
+        <h3>
+          <b>{{localize "tsl.cargoPage.cargoWeight"}}:&nbsp;</b>
+          0&nbsp;lbs
+        </h3>
+      </div>
+      <table class="tsl-cargo-table">
+        <thead>
+          <tr>
+            <th>{{localize "tsl.cargoPage.cargoItem"}}</th>
+            <th style="width:70px">{{localize "tsl.cargoPage.carried"}}</th>
+            <th style="width:70px">{{localize "tsl.cargoPage.eachWeight"}}</th>
+            <th style="width:70px">{{localize "tsl.cargoPage.quantity"}}</th>
+            <th style="width:70px">{{localize "tsl.cargoPage.weight"}}</th>
+            <th style="width:25px"><i class="fas fa-trash"></i></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>
+              <div class="cargo-item">
+                <img alt="" src="icons/svg/item-bag.svg"/>
+                <span>Test Item Column</span>
+              </div>
+            </td>
+            <td>
+              <input type="checkbox"/>
+            </td>
+            <td>
+              <input style="width:50px" name="" type="number" data-dtype="Number" value=""/>
+            </td>
+            <td>
+              <input style="width:50px" name="" type="number" data-dtype="Number" value=""/>
+            </td>
+            <td>
+              <input style="width:50px" name="" type="number" data-dtype="Number" value=""/>
+            </td>
+            <td>
+              <a><i class="fas fa-trash"></i></a>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      <textarea name="" placeholder="{{localize "tsl.cargoPage.notes"}}"></textarea>
     </div>
 
     {{!-- Notes --}}
