Temporary temp file to aid in business logic.

--- a/templates/partials/tsl-summary-rightpane.hbs
+++ b/templates/partials/tsl-summary-rightpane.hbs
@@ -30,7 +30,7 @@
       <tr>
         <th>{{localize "tsl.summaryPage.base"}}</th>
         <th>{{localize "tsl.summaryPage.ld"}}</th>
-        <th>{{localize "tsl.summaryPage.mods"}}</th>
+        <th>{{localize "tsl.summaryPage.temp"}}</th>
       </tr>
     </thead>
     <tbody>
@@ -63,7 +63,7 @@
     <thead>
       <tr>
         <th>{{localize "tsl.summaryPage.base"}}</th>
-        <th>{{localize "tsl.summaryPage.mods"}}</th>
+        <th>{{localize "tsl.summaryPage.temp"}}</th>
       </tr>
     </thead>
     <tbody>
