Data integration on summary page left pane.

--- a/less/tsl.less
+++ b/less/tsl.less
@@ -145,11 +145,11 @@
             left: calc(50% - 1px);
             top: 8px;
             position: absolute;
-            transform: rotate(-30deg); // -88deg to 88deg range. calc with -88 + (% of max * 176). Will be added inline in HTML/Handlebars.
+            transform: rotate(-30deg);
             transform-origin: bottom;
           }
 
-          .pushed { // for speedometer only; when pushed past Top Speed
+          .pushed {
             animation: move 0.2s infinite;
           }
 
