--- a/templates/partials/tsl-core-stats.hbs
+++ b/templates/partials/tsl-core-stats.hbs
@@ -20,7 +20,7 @@
       <tr style="height:38px">
         <td>{{localnum 15500}}</td>
         <td>
-          <input style="width:40px" name="data.stat.topSpeed.temp" type="number" data-dtype="Number" value="{{data.stat.topSpeed.temp}}" onfocus="this.select()"/>
+          <input style="width:40px" name="data.stats.topSpeed.temp" type="number" data-dtype="Number" value="{{data.stats.topSpeed.temp}}" onfocus="this.select()"/>
         </td>
       </tr>
     </tbody>
@@ -46,7 +46,7 @@
       <tr style="height:38px">
         <td><img class="glow-red" height="26px" src="modules/tsl-module/img/hazard.svg"/></td>
         <td>
-          <input style="width:40px" name="data.stat.xlr8.temp" type="number" data-dtype="Number" value="{{data.stat.xlr8.temp}}" onfocus="this.select()"/>
+          <input style="width:40px" name="data.stats.xlr8.temp" type="number" data-dtype="Number" value="{{data.stats.xlr8.temp}}" onfocus="this.select()"/>
         </td>
       </tr>
     </tbody>
@@ -72,7 +72,7 @@
       <tr style="height:38px">
         <td><img class="glow-red" height="26px" src="modules/tsl-module/img/hazard.svg"/></td>
         <td>
-          <input style="width:40px" name="data.stat.xlr8.temp" type="number" data-dtype="Number" value="{{data.stat.xlr8.temp}}" onfocus="this.select()"/>
+          <input style="width:40px" name="data.stats.xlr8.temp" type="number" data-dtype="Number" value="{{data.stats.xlr8.temp}}" onfocus="this.select()"/>
         </td>
       </tr>
     </tbody>
@@ -98,7 +98,7 @@
       <tr style="height:38px">
         <td><img class="glow-red" height="26px" src="modules/tsl-module/img/hazard.svg"/></td>
         <td>
-          <input style="width:40px" name="data.stat.xlr8.temp" type="number" data-dtype="Number" value="{{data.stat.xlr8.temp}}" onfocus="this.select()"/>
+          <input style="width:40px" name="data.stats.xlr8.temp" type="number" data-dtype="Number" value="{{data.stats.xlr8.temp}}" onfocus="this.select()"/>
         </td>
       </tr>
     </tbody>
@@ -124,7 +124,7 @@
       <tr style="height:38px">
         <td><img class="glow-red" height="26px" src="modules/tsl-module/img/hazard.svg"/></td>
         <td>
-          <input style="width:40px" name="data.stat.xlr8.temp" type="number" data-dtype="Number" value="{{data.stat.xlr8.temp}}" onfocus="this.select()"/>
+          <input style="width:40px" name="data.stats.xlr8.temp" type="number" data-dtype="Number" value="{{data.stats.xlr8.temp}}" onfocus="this.select()"/>
         </td>
       </tr>
     </tbody>
@@ -150,7 +150,7 @@
       <tr style="height:38px">
         <td><img class="glow-red" height="26px" src="modules/tsl-module/img/hazard.svg"/></td>
         <td>
-          <input style="width:40px" name="data.stat.xlr8.temp" type="number" data-dtype="Number" value="{{data.stat.xlr8.temp}}" onfocus="this.select()"/>
+          <input style="width:40px" name="data.stats.xlr8.temp" type="number" data-dtype="Number" value="{{data.stats.xlr8.temp}}" onfocus="this.select()"/>
         </td>
       </tr>
     </tbody>
