Fixed localnum helper to return arg if not number.

--- a/templates/partials/tsl-summary-leftpane.hbs
+++ b/templates/partials/tsl-summary-leftpane.hbs
@@ -98,7 +98,7 @@
     </thead>
     <tbody>
       <tr>
-        <td style="font-size:1.25em">{{data.vehicle.weight.curb}}</td>
+        <td style="font-size:1.25em">{{localnum data.vehicle.weight.curb}}&nbsp;lbs</td>
       </tr>
     </tbody>
   </table>
