Data integration on summary page right pane.

--- a/less/tsl.less
+++ b/less/tsl.less
@@ -10,6 +10,10 @@
     margin: 0;
   }
 
+  .dim {
+    filter: invert(29%) sepia(0%) saturate(0%) hue-rotate(223deg) brightness(103%) contrast(81%);
+  }
+
   .glow-red {
     filter: invert(12%) sepia(99%) saturate(6635%) hue-rotate(3deg) brightness(114%) contrast(114%);
   }
@@ -145,7 +149,6 @@
             left: calc(50% - 1px);
             top: 8px;
             position: absolute;
-            transform: rotate(-30deg);
             transform-origin: bottom;
           }
 
