--- a/templates/partials/tsl-summary-rightpane.hbs
+++ b/templates/partials/tsl-summary-rightpane.hbs
@@ -11,7 +11,7 @@
           <div class="tsl-gauge">
             <div class="tsl-current-value">
               <a><i class="fas fa-minus"></i></a>
-              <input style="width:75px" name="" type="number" data-dtype="Number" value="" onfocus="this.select()"/>
+              <input style="width:75px" name="data.vehicle.hoursOfOperation.value" type="number" data-dtype="Number" value="{{data.vehicle.hoursOfOperation.value}}" onfocus="this.select()"/>
               <a><i class="fas fa-plus"></i></a>
             </div>
             <div class="gauge" style="width:140px">
@@ -19,8 +19,14 @@
               {{#times 10}}
                 <span class="tick tick-fuel"></span>
               {{/times}}
-              <img style="{{! if someval < 25% display:none}}" class="glow-red fuel-light" src="modules/tsl-module/img/fuel.svg"/>
-              <span class="needle"></span>
+              <img
+                src="modules/tsl-module/img/fuel.svg"
+                class="fuel-light {{fuelClass data.vehicle.hoursOfOperation}}"
+              />
+              <span
+                class="needle"
+                {{!-- style="transform:rotate({{fuelAngle _}}deg)" --}}
+              ></span>
             </div>
           </div>
         </td>
@@ -35,12 +41,15 @@
     </thead>
     <tbody>
       <tr>
-        <td>8000</td>
-        <td>-8000</td>
-        <td><input style="width:40px" name="" type="number" data-dtype="Number" value=""/></td>
+        <td>{{data.vehicle.hoursOfOperation.base}}</td>
+        <td>{{data.vehicle.hoursOfOperation.ldPen}}</td>
+        <td><input style="width:40px" name="data.vehicle.hoursOfOperation.temp" type="number" data-dtype="Number" value="{{data.vehicle.hoursOfOperation.temp}}"/></td>
       </tr>
       <tr>
-        <td colspan="3"><b>{{localize "tsl.summaryPage.fuelCap"}}:&nbsp;</b>1,200</td>
+        <td colspan="3">
+          <b>{{localize "tsl.summaryPage.fuelCap"}}:&nbsp;</b>
+          {{localnum data.vehicle.fuelCap.max}}
+        </td>
       </tr>
     </tbody>
   </table>
@@ -54,7 +63,7 @@
       <tr>
         <td colspan="2">
           <div class="tsl-ramming-damage">
-            <span>15,500</span>
+            <span>{{localnum data.vehicle.rammingDamage.total}}</span>
             <a><i class="fas fa-car-crash"></i></a>
           </div>
         </td>
@@ -68,8 +77,10 @@
     </thead>
     <tbody>
       <tr>
-        <td>15,500</td>
-        <td><input style="width:40px" name="" type="number" data-dtype="Number" value=""/></td>
+        <td>{{localnum data.vehicle.rammingDamage.base}}</td>
+        <td>
+          <input style="width:40px" name="data.vehicle.rammingDamage.temp" type="number" data-dtype="Number" value="{{data.vehicle.rammingDamage.temp}}"/>
+        </td>
       </tr>
     </tbody>
   </table>
