--- a/templates/tsl-vehicle-sheet.hbs
+++ b/templates/tsl-vehicle-sheet.hbs
@@ -90,81 +90,7 @@
     {{!-- Components --}}
     <div class="tab" data-group="primary" data-tab="components">
       <div class="tsl-components-row">
-        {{#each data.vehicle.components as |value key|}}
-        {{log value}}
-        <table>
-          <thead>
-            <tr>
-              <th colspan="4">{{localize (concat "tsl.components." (concat key ".label"))}}</th>
-            </tr>
-          </thead>
-          <thead>
-            <tr>
-              <th colspan="2">{{localize "tsl.componentsPage.total"}}</th>
-              <th>{{localize "tsl.componentsPage.base"}}</th>
-              <th>{{localize "tsl.componentsPage.mods"}}</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <th style="width:85px">{{localize (concat "tsl.components." (concat key ".stat"))}}</th>
-              <td style="font-size:1.25em">
-                <b>
-                  {{#unless (eq key "transmission")}}
-                    {{value.stat.total}}
-                  {{else}}
-                    {{po value.stat}}
-                  {{/unless}}
-                </b>
-              </td>
-              <td><input style="width:50px" type="number" data-dtype="Number"/></td>
-              <td><input style="width:50px" type="number" data-dtype="Number"/></td>
-            </tr>
-          </tbody>
-          <thead>
-            <tr>
-              <th></th>
-              <th>{{localize "tsl.componentsPage.total"}}</th>
-              <th>{{localize "tsl.componentsPage.base"}}</th>
-              <th>{{localize "tsl.componentsPage.resist"}}</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <th>{{localize "tsl.componentsPage.integrity"}}</th>
-              <td style="font-size:1.25em"><b>10</b></td>
-              <td><input style="width:50px" type="number" data-dtype="Number"/></td>
-              <td><input style="width:50px" type="number" data-dtype="Number"/></td>
-            </tr>
-          </tbody>
-          <thead>
-            <tr>
-              {{#unless (eq key "transmission")}}
-                <th colspan="2">
-                  {{localize (concat "tsl.components." (concat key ".primary"))}}
-                </th>
-                <th colspan="2">
-                  {{localize (concat "tsl.components." (concat key ".secondary"))}}
-                </th>
-              {{else}}
-                <th colspan="4">
-                  {{localize (concat "tsl.components." (concat key ".primary"))}}
-                </th>
-              {{/unless}}
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              {{#unless (eq key "transmission")}}
-                <td colspan="2"><input style="width:50px" type="number" data-dtype="Number"/></td>
-                <td colspan="2"><input style="width:50px" type="number" data-dtype="Number"/></td>
-              {{else}}
-                <td colspan="4"><input style="width:50px" type="number" data-dtype="Number"/></td>
-              {{/unless}}
-            </tr>
-          </tbody>
-        </table>
-        {{/each}}
+        {{> "modules/tsl-module/templates/partials/tsl-components.hbs"}}
         <table>
           <thead>
             <tr>
